change hive logs settings and debug hive heap_size distribution